Fix logo appearing skewed on IE11.

--- a/themes/phl-core/assets/stylesheets/theme/phl_overrides.scss
+++ b/themes/phl-core/assets/stylesheets/theme/phl_overrides.scss
@@ -118,3 +118,8 @@ body > nav > div > div > a > img {
 .microcopy {
 	max-width: inherit;
 }
+
+.logo img {
+	width: 160px;
+	height: 42px;
+}
